@@ -1,41 +1,0 @@
-@comment $NetBSD: PLIST,v 1.7 2022/01/10 08:54:47 wiz Exp $
-bin/pc_query
-bin/pycard-import
-bin/pycardsyncer
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/pycarddav/__init__.py
-${PYSITELIB}/pycarddav/__init__.pyc
-${PYSITELIB}/pycarddav/__init__.pyo
-${PYSITELIB}/pycarddav/backend.py
-${PYSITELIB}/pycarddav/backend.pyc
-${PYSITELIB}/pycarddav/backend.pyo
-${PYSITELIB}/pycarddav/carddav.py
-${PYSITELIB}/pycarddav/carddav.pyc
-${PYSITELIB}/pycarddav/carddav.pyo
-${PYSITELIB}/pycarddav/controllers/__init__.py
-${PYSITELIB}/pycarddav/controllers/__init__.pyc
-${PYSITELIB}/pycarddav/controllers/__init__.pyo
-${PYSITELIB}/pycarddav/controllers/query.py
-${PYSITELIB}/pycarddav/controllers/query.pyc
-${PYSITELIB}/pycarddav/controllers/query.pyo
-${PYSITELIB}/pycarddav/controllers/sync.py
-${PYSITELIB}/pycarddav/controllers/sync.pyc
-${PYSITELIB}/pycarddav/controllers/sync.pyo
-${PYSITELIB}/pycarddav/model.py
-${PYSITELIB}/pycarddav/model.pyc
-${PYSITELIB}/pycarddav/model.pyo
-${PYSITELIB}/pycarddav/ui.py
-${PYSITELIB}/pycarddav/ui.pyc
-${PYSITELIB}/pycarddav/ui.pyo
-${PYSITELIB}/pycarddav/version.py
-${PYSITELIB}/pycarddav/version.pyc
-${PYSITELIB}/pycarddav/version.pyo
-man/man1/pc_query.1
-man/man1/pycard-import.1
-man/man1/pycardsyncer.1
-share/doc/py-carddav/README.rst
-share/examples/py-carddav/pycard.conf.sample
