@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.12 2021/10/26 10:59:22 nia Exp $
-
-BLAKE2s (pyCardDAV-0.7.0.tar.gz) = 3e9a109a42e51e902bd76149dddbc296c1902c57fcb6a7602a109699973049a6
-SHA512 (pyCardDAV-0.7.0.tar.gz) = 342e9e084fcda5e0ee7f5b2085767f306bb34f5ebf4fb3e2a39fc65986d0217f79fbfc244c69cc91d817a0945e9ddb819ec7c7067c93268f5f1ddac23ae6c10b
-Size (pyCardDAV-0.7.0.tar.gz) = 36462 bytes
